--- a/card-display.html
+++ b/card-display.html
@@ -62,7 +62,7 @@
             </template>
             <template is="dom-if" if="{{card.html}}">
               <paper-material elevation="4" class="cardstyle" title="{{card.title}}">
-                <div data-index="{{index}}" inner-h-t-m-l="{{card.html)}}"></div>
+                <div data-index="{{index}}" inner-h-t-m-l="{{card.html}}"></div>
               </paper-material>
             </template>
           </div>
