--- a/card-display.html
+++ b/card-display.html
@@ -153,8 +153,8 @@
       }
       for (var i = 0; i < cards.length; i++) {
         console.log(cards[i])
-        if (card.url === this.hash(this.uid+card.Question)) {
-          if (card.face) {
+        if (cards[i].url === this.hash(this.uid+cards[i].Question)) {
+          if (cards[i].face) {
             cards[i].data = cards[i].face
             cards[i].hidden = false
           }
