--- a/card-display.html
+++ b/card-display.html
@@ -201,7 +201,7 @@
     hash: function(it) {
       return this.$.mediatorData.hash(it)
     },
-    getHtml: function(data) {
+    getHtml: function(card) {
       var output = ""
       if (card.data) {
         output = card.data + ""
