--- a/card-display.html
+++ b/card-display.html
@@ -25,8 +25,13 @@
       }
       .cardcontainer {
         float: left;
-        display: block;
+        display: inline-block;
         height: 220px;
+        width: 167px;
+        margin: 0px 6px 30px 0px;
+      }
+      .filler {
+        display: inline-block;
         width: 167px;
         margin: 0px 6px 30px 0px;
       }
@@ -51,85 +56,86 @@
         overflow: hidden;
       }
     </style>
-    <template is="dom-if" if="{{veiwable}}" restamp>
-      <template is="dom-repeat" items="{{hand}}" as="card" observe="title data">
-        <template is="dom-if" if="{{!getCardAttr(card, shared, 'hidden')}}">
-          <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
-            <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <div on-tap="openDeck" data-index="{{index}}">
-                <card-deck title="{{card.title}}" class="deck"></card-deck>
-              </div>
-            </template>
-            <template is="dom-if" if="{{!isCard(card,'deck')}}">
-              <paper-material elevation="4" class="cardstyle" title="{{card.title}}">
-                <div data-index="{{index}}" inner-h-t-m-l="{{card.html}}"></div>
-              </paper-material>
-            </template>
-          </div>
-        </template>
-      </template>
-    </template>
-    <template is="dom-if" if="{{sortable}}" restamp>
-      <sortable-list sort-me="{{cards}}" output="{{sortMe}}">
-        <template id="cardsS" is="dom-repeat" items="{{sortMe}}" as="card" observe="title data">
-          <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
-            <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <div>
-                <card-deck title="{{card.title}}" class="deck"></card-deck>
-              </div>
-            </template>
-            <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" class="cardstyle">
-                <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
-              </paper-material>
-            </template>
-          </div>
-        </template>
-      </sortable-list>
-    </template>
-    <template is="dom-if" if="{{selectable}}" restamp>
-      <iron-selector multi selected-values="{{selected}}">
-        <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
-          <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
-            <template is="dom-if" if="{{isCard(card,'deck')}}">
-              <div>
-                <card-deck title="{{card.title}}" class="deck"></card-deck>
-              </div>
-            </template>
-            <template is="dom-if" if="{{isCard(card,'custom')}}">
-              <paper-material elevation="4" class="cardstyle">
-                <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
-              </paper-material>
-            </template>
-            <paper-fab icon="done"></paper-fab>
-          </div>
-        </template>
-      </iron-selector>
-    </template>
-    <template is="dom-if" if="{{pickable}}" restamp>
-      <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
-        <div class="cardcontainer" on-tap="picked" data-index="{{index}}">
-          <template is="dom-if" if="{{isCard(card,'deck')}}">
-            <div>
-              <card-deck title="{{card.title}}" class="deck"></card-deck>
+    <div class="container"></div>
+      <template is="dom-if" if="{{veiwable}}" restamp>
+        <template is="dom-repeat" items="{{hand}}" as="card" observe="title data">
+          <template is="dom-if" if="{{!getCardAttr(card, shared, 'hidden')}}">
+            <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
+              <template is="dom-if" if="{{isCard(card,'deck')}}">
+                <div on-tap="openDeck" data-index="{{index}}">
+                  <card-deck title="{{card.title}}" class="deck"></card-deck>
+                </div>
+              </template>
+              <template is="dom-if" if="{{!isCard(card,'deck')}}">
+                <paper-material elevation="4" class="cardstyle" title="{{card.title}}">
+                  <div data-index="{{index}}" inner-h-t-m-l="{{card.html}}"></div>
+                </paper-material>
+              </template>
             </div>
           </template>
-          <template is="dom-if" if="{{isCard(card,'custom')}}">
-            <paper-material elevation="4" class="cardstyle">
-              <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
-            </paper-material>
+        </template>
+        </template>
+      <template is="dom-if" if="{{sortable}}" restamp>
+        <sortable-list sort-me="{{cards}}" output="{{sortMe}}">
+          <template id="cardsS" is="dom-repeat" items="{{sortMe}}" as="card" observe="title data">
+            <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
+              <template is="dom-if" if="{{isCard(card,'deck')}}">
+                <div>
+                  <card-deck title="{{card.title}}" class="deck"></card-deck>
+                </div>
+              </template>
+              <template is="dom-if" if="{{isCard(card,'custom')}}">
+                <paper-material elevation="4" class="cardstyle">
+                  <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
+                </paper-material>
+              </template>
+            </div>
           </template>
-          <paper-fab icon="touch-app"></paper-fab>
-        </div>
+        </sortable-list>
       </template>
-    </template>
-    <div class="filler"></div>
-    <div class="filler"></div>
-    <div class="filler"></div>
-    <div class="filler"></div>
-    <div class="filler"></div>
-    <div class="filler"></div>
-    
+      <template is="dom-if" if="{{selectable}}" restamp>
+        <iron-selector multi selected-values="{{selected}}">
+          <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
+            <div class="cardcontainer" on-tap="tapped" data-index="{{index}}">
+              <template is="dom-if" if="{{isCard(card,'deck')}}">
+                <div>
+                  <card-deck title="{{card.title}}" class="deck"></card-deck>
+                </div>
+              </template>
+              <template is="dom-if" if="{{isCard(card,'custom')}}">
+                <paper-material elevation="4" class="cardstyle">
+                  <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
+                </paper-material>
+              </template>
+              <paper-fab icon="done"></paper-fab>
+            </div>
+          </template>
+        </iron-selector>
+      </template>
+      <template is="dom-if" if="{{pickable}}" restamp>
+        <template is="dom-repeat" items="{{cards}}" as="card" observe="title data">
+          <div class="cardcontainer" on-tap="picked" data-index="{{index}}">
+            <template is="dom-if" if="{{isCard(card,'deck')}}">
+              <div>
+                <card-deck title="{{card.title}}" class="deck"></card-deck>
+              </div>
+            </template>
+            <template is="dom-if" if="{{isCard(card,'custom')}}">
+              <paper-material elevation="4" class="cardstyle">
+                <div data-index="{{index}}" inner-h-t-m-l="{{getHtml(card)}}"></div>
+              </paper-material>
+            </template>
+            <paper-fab icon="touch-app"></paper-fab>
+          </div>
+        </template>
+      </template>
+      <div class="filler"></div>
+      <div class="filler"></div>
+      <div class="filler"></div>
+      <div class="filler"></div>
+      <div class="filler"></div>
+      <div class="filler"></div>
+    </div>
     <paper-dialog id="dialDeck" modal >
       <template is="dom-if" if="{{deck}}" restamp>
         <card-display cards="{{deck}}" lookup="{{lookup}}"></card-display>
@@ -246,7 +252,11 @@
           return card.url.split(":")[0] !== "deck"
         }
       } else {
-        return true
+        if (isA === "deck") {
+          return false
+        } else {
+          return true
+        }
       }
     },
     openDeck: function(e){
