--- a/card-display.html
+++ b/card-display.html
@@ -23,12 +23,17 @@
       .iron-selected paper-fab {
         background: var(--accent-color);
       }
+      .container {
+        margin: 20px auto;
+        display: block;
+        width: 100%;
+        text-align: center;
+      }
       .cardcontainer {
-        float: left;
         display: inline-block;
         height: 220px;
         width: 167px;
-        margin: 0px 6px 30px 0px;
+        margin: 0px 6px 10px 0px;
       }
       .filler {
         display: inline-block;
@@ -220,7 +225,7 @@
       if (card.data) {
         output = card.data + ""
       } else {
-        output = '<a href="{{url}}" target="_blank"><div style="max-width:80%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px; margin-left: 20px;background-image:url({{image}});background-repeat:no-repeat"></div><br><h3 style="margin:0px;padding:10px;font-size: 15px;"><a style="text-decoration: none;">{{title}}</h3></a>'
+        output = '<a href="{{url}}" target="_blank"><div style="max-width:80%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px; background-image:url({{image}});background-repeat:no-repeat"></div><br><h3 style="margin:0px;padding:10px;font-size: 15px;"><a style="text-decoration: none;">{{title}}</h3></a>'
       }
       for (var attr in card) {
         if (attr !== "data") {
