--- a/card-display.html
+++ b/card-display.html
@@ -134,12 +134,14 @@
           </div>
         </template>
       </template>
-      <div class="filler"></div>
-      <div class="filler"></div>
-      <div class="filler"></div>
-      <div class="filler"></div>
-      <div class="filler"></div>
-      <div class="filler"></div>
+      <template is="dom-if" if="{{pad}}">
+        <div class="filler"></div>
+        <div class="filler"></div>
+        <div class="filler"></div>
+        <div class="filler"></div>
+        <div class="filler"></div>  
+        <div class="filler"></div>
+      <template>
     </div>
     <paper-dialog id="dialDeck" modal >
       <template is="dom-if" if="{{deck}}" restamp>
