--- a/card-display.html
+++ b/card-display.html
@@ -141,7 +141,7 @@
         <div class="filler"></div>
         <div class="filler"></div>  
         <div class="filler"></div>
-      <template>
+      </template>
     </div>
     <paper-dialog id="dialDeck" modal >
       <template is="dom-if" if="{{deck}}" restamp>
