--- a/card-display.html
+++ b/card-display.html
@@ -47,8 +47,7 @@
         font-weight: 500;
       }
       paper-dialog {
-        background: none;
-        box-shadow: none;
+        background: rgba(255,255,255,.7);
       }
       paper-material {
         width: 100%;
