--- a/card-display.html
+++ b/card-display.html
@@ -162,9 +162,11 @@
       switch(num) {
         case 1:
         case 2:
-        case 4:
         case 6:
           return []
+          break;
+        case 4:
+          return [1,1]
           break;
         case 3:
         case 5:
