--- a/card-display.html
+++ b/card-display.html
@@ -80,7 +80,7 @@
               <template is="dom-if" if="{{isCard(card,'deck')}}">
                 <card-deck title="{{card.title}}" class="deck"></card-deck>
               </template>
-              <template is="dom-if" if="{{isCard(card,'custom')}}">
+              <template is="dom-if" if="{{!isCard(card,'deck')}}">
                 <paper-material elevation="4" class="cardstyle">
                   <div data-index="{{index}}" inner-h-t-m-l="{{card._html}}"></div>
                 </paper-material>
@@ -97,7 +97,7 @@
                 <template is="dom-if" if="{{isCard(card,'deck')}}">
                   <card-deck title="{{card.title}}" class="deck"></card-deck>
                 </template>
-                <template is="dom-if" if="{{isCard(card,'custom')}}">
+                <template is="dom-if" if="{{!isCard(card,'deck')}}">
                   <paper-material elevation="4" class="cardstyle">
                     <div data-index="{{index}}" inner-h-t-m-l="{{card._html}}"></div>
                   </paper-material>
@@ -114,7 +114,7 @@
             <template is="dom-if" if="{{isCard(card,'deck')}}">
               <card-deck title="{{card.title}}" class="deck"></card-deck>
             </template>
-            <template is="dom-if" if="{{isCard(card,'custom')}}">
+            <template is="dom-if" if="{{!isCard(card,'deck')}}">
               <paper-material elevation="4" class="cardstyle">
                 <div data-index="{{index}}" inner-h-t-m-l="{{card._html}}"></div>
               </paper-material>
