--- a/card-display.html
+++ b/card-display.html
@@ -250,7 +250,7 @@
       if (card._data) {
         output = card._data + ""
       } else {
-        output = '<a href="{{url}}" target="_blank"><div style="max-width:80%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px; background-image:url({{image}});background-repeat:no-repeat"></div><br><h3 style="margin:0px;padding:10px;font-size: 15px;"><a style="text-decoration: none;">{{title}}</h3></a>'
+        output = '<a href="{{url}}" target="_blank"><div style="max-width:80%;background-size: contain;background-position: center;display:inline-block;width:32px;height:32px; background-image:url({{fav}});background-repeat:no-repeat"></div><h3 style="margin:0px;padding:10px;font-size: 15px;">{{title}}</h3><div style="max-width:80%;background-size: contain;background-position: center;display:inline-block;width:200px;height:147px; background-image:url({{image}});background-repeat:no-repeat"></div></a>'
       }
       for (var attr in card) {
         if (attr !== "_data") {
