--- a/card-display.html
+++ b/card-display.html
@@ -152,7 +152,8 @@
       veiwable: {type: Boolean, computed:"getVeiwable(selectable, pickable, sortable)"},
       hand: {computed: "getHand(cards.*, shared.*, sortByExtOrder, maxCards)"},
       sortByExt: {type: Boolean, value: false},
-      sortByExtOrder
+      sortByExtOrder: {type: Array, value: []},
+      _doThis: {computed: "getSortByExtOrder(_cards, sortByExt, maxCards, editorExtensionId)"),
       maxCards: {type: Number, value: 7},
       editorExtensionId: {type: String, value: "dfcneagmkfhjgefgogpaakjfjknefbdg"},
       selectableCards: {computed: "getSelectableCards(cards.*)"}
