--- a/card-display.html
+++ b/card-display.html
@@ -153,7 +153,7 @@
       hand: {computed: "getHand(cards.*, shared.*, sortByExtOrder, maxCards)"},
       sortByExt: {type: Boolean, value: false},
       sortByExtOrder: {type: Array, value: []},
-      _doThis: {computed: "getSortByExtOrder(_cards, sortByExt, maxCards, editorExtensionId)"},
+      _doThis: {computed: "getSortByExtOrder(cards.*, sortByExt, maxCards, editorExtensionId)"},
       maxCards: {type: Number, value: 7},
       editorExtensionId: {type: String, value: "dfcneagmkfhjgefgogpaakjfjknefbdg"},
       selectableCards: {computed: "getSelectableCards(cards.*)"}
