--- a/card-display.html
+++ b/card-display.html
@@ -190,7 +190,7 @@
       if (sortByExt) {
         var toSort = []
         for (var i = 0; i < cards.length; i++) {
-          toSort.push(cards.url)
+          toSort.push(cards[i].url)
         }
         var thatCardDisplay = this
         // Make a simple request:
